--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -32,4 +32,7 @@
     <color name="color_type_wrong">#ed7861</color>
     <color name="color_type_warning">#e8bd4b</color>
     <color name="color_type_success">#90b06e</color>
+
+    <color name="rankGraphLine">@color/colorActionableText</color>
+
 </resources>
