--- a/app/src/main/res/layout/fragment_aigame.xml
+++ b/app/src/main/res/layout/fragment_aigame.xml
@@ -1,53 +1,239 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorTextBackground">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/board_container"
-        android:layout_margin="8dp"
-        >
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
-            tools:text="The Vital Point\n\nIt’s common sense to answer an attachment with a hane. However, if the attaching stone is connected to friendly forces, one cannot stubbornly hane. White stretches to here instead. Allowing Black to create a tiger’s mouth with a hane at Q14(X) is intolerable for White. (Vol. 1.)\n\nA and B are joseki.\n\nC and D are asking for a larger corner but leave bad aji."
-            />
-    </ScrollView>
 
     <me.zhanghai.android.materialprogressbar.MaterialProgressBar
         android:id="@+id/progressBar"
+        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:indeterminate="true"
-        app:mpb_progressStyle="horizontal"
-        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
-        app:mpb_useIntrinsicPadding="false"
-        app:layout_constraintTop_toTopOf="parent"
-        app:mpb_indeterminateTint="@color/colorTextBackground"
         android:background="@color/colorPrimary"
         android:elevation="4dp"
+        android:indeterminate="true"
         android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:mpb_indeterminateTint="@color/colorTextBackground"
+        app:mpb_progressStyle="horizontal"
+        app:mpb_useIntrinsicPadding="false" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/iconContainerLeft"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="2dp"
+        app:layout_constraintBottom_toTopOf="@id/nameLabelLeft"
+        app:layout_constraintDimensionRatio="h,1:1"
+        app:layout_constraintHeight_max="80dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iconViewLeft"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_ai" />
+    </androidx.cardview.widget.CardView>
+
+    <com.cpiz.android.bubbleview.BubbleTextView
+        android:id="@+id/chatBubble"
+        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        app:layout_constraintTop_toTopOf="@id/iconContainerLeft"
+        app:layout_constraintLeft_toRightOf="@id/iconContainerLeft"
+        app:layout_constraintRight_toLeftOf="@id/iconContainerRight"
+        android:text="Give me a second, I'm starting up..."
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:bb_cornerRadius="6dp"
+        app:bb_arrowDirection="Left"
+        app:bb_fillColor="@color/colorOffWhite"
+        app:bb_borderColor="@android:color/darker_gray"
+        app:bb_borderWidth="1dp"
+        android:textSize="12sp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/hintButton"
+        android:layout_width="50dp"
+        android:layout_height="36dp"
+        android:text="Hint"
+        app:layout_constraintRight_toRightOf="@id/chatBubble"
+        app:layout_constraintTop_toBottomOf="@id/chatBubble"
+        style="@style/AIChatButton"
+        android:textColor="@color/colorTextSecondary"
+        android:textAllCaps="false"
+        android:textSize="10sp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        />
+
+    <TextView
+        android:id="@+id/nameLabelLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="KataGO"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/board_container"
+        app:layout_constraintLeft_toLeftOf="@id/iconContainerLeft"
+        app:layout_constraintRight_toLeftOf="@id/colorIndicatorLeft"
+        app:layout_constraintTop_toBottomOf="@id/iconContainerLeft" />
+
+    <ImageView
+        android:id="@+id/colorIndicatorLeft"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginLeft="8dp"
+        android:background="@drawable/circle_background"
+        android:backgroundTint="@color/black"
+        android:padding="1dp"
+        android:src="@drawable/circle_background"
+        app:layout_constraintBottom_toBottomOf="@id/nameLabelLeft"
+        app:layout_constraintLeft_toRightOf="@id/nameLabelLeft"
+        app:layout_constraintRight_toRightOf="@id/iconContainerLeft"
+        app:layout_constraintTop_toTopOf="@id/nameLabelLeft" />
+
+    <TextView
+        android:id="@+id/nameLabelRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxWidth="80dp"
+        android:maxLines="1"
+        android:text="Player"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/board_container"
+        app:layout_constraintLeft_toRightOf="@id/colorIndicatorRight"
+        app:layout_constraintRight_toRightOf="@id/iconContainerRight"
+        app:layout_constraintTop_toBottomOf="@id/iconContainerRight" />
+
+    <ImageView
+        android:id="@+id/colorIndicatorRight"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/circle_background"
+        android:backgroundTint="@color/black"
+        android:padding="1dp"
+        android:src="@drawable/circle_background"
+        app:layout_constraintBottom_toBottomOf="@id/nameLabelRight"
+        app:layout_constraintLeft_toLeftOf="@id/iconContainerRight"
+        app:layout_constraintRight_toLeftOf="@id/nameLabelRight"
+        app:layout_constraintTop_toTopOf="@id/nameLabelRight"
+        app:tint="@color/black" />
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/iconContainerRight"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginRight="24dp"
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="2dp"
+        app:layout_constraintBottom_toBottomOf="@id/iconContainerLeft"
+        app:layout_constraintDimensionRatio="h,1:1"
+        app:layout_constraintHeight_max="80dp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/iconContainerLeft"
+        app:layout_constraintVertical_weight="1">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iconViewRight"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_person_outline" />
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/prisonersLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Prisoners"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@id/nameLabelLeft"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/nameLabelLeft" />
+
+    <TextView
+        android:id="@+id/komiLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Komi"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/prisonersLabel" />
+
+    <TextView
+        android:id="@+id/prisonersLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="24dp"
+        android:textSize="12sp"
+        app:layout_constraintBaseline_toBaselineOf="@id/prisonersLabel"
+        app:layout_constraintRight_toLeftOf="@id/prisonersLabel"
+        tools:text="5" />
+
+    <TextView
+        android:id="@+id/komiLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="24dp"
+        android:textSize="12sp"
+        app:layout_constraintBaseline_toBaselineOf="@id/komiLabel"
+        app:layout_constraintRight_toLeftOf="@id/prisonersLabel"
+        tools:text="5" />
+
+    <TextView
+        android:id="@+id/prisonersRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:textSize="12sp"
+        app:layout_constraintBaseline_toBaselineOf="@id/prisonersLabel"
+        app:layout_constraintLeft_toRightOf="@id/prisonersLabel"
+        tools:text="5" />
+
+    <TextView
+        android:id="@+id/komiRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:textSize="12sp"
+        app:layout_constraintBaseline_toBaselineOf="@id/komiLabel"
+        app:layout_constraintLeft_toRightOf="@id/prisonersLabel"
+        tools:text="5" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/board_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="4dp"
+        android:layout_marginTop="4dp"
         app:cardBackgroundColor="@color/colorTextBackground"
-        app:layout_constraintBottom_toTopOf="@id/playControls"
-        app:layout_constraintDimensionRatio="1:1"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="2dp"
         app:cardPreventCornerOverlap="false"
+        app:layout_constraintBottom_toTopOf="@id/winrateLabel"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toBottomOf="@id/nameLabelLeft"
         >
 
         <io.zenandroid.onlinego.ui.views.BoardView
@@ -56,60 +242,112 @@
             android:layout_height="wrap_content" />
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
+    <TextView
+        android:id="@+id/scoreleadLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="14dp"
+        android:text="Score prediction: white leads by 0.5"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@id/winrateLabel"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/board_container"
+        />
+
+    <TextView
+        android:id="@+id/winrateLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="14dp"
+        android:text="White winrate:"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@id/winrateProgressBar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scoreleadLabel"
+        />
+
+    <com.google.android.material.progressindicator.ProgressIndicator
+        android:id="@+id/winrateProgressBar"
+        style="@style/Widget.MaterialComponents.ProgressIndicator.Linear.Determinate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
+        android:background="@drawable/rounded_corners"
+        android:backgroundTint="@color/black"
+        android:padding="1dp"
+        android:progress="50"
+        app:indicatorColor="@color/white"
+        app:indicatorCornerRadius="3dp"
+        app:layout_constraintBottom_toTopOf="@id/playControls"
+        app:layout_constraintTop_toBottomOf="@id/winrateLabel"
+        app:trackColor="@color/black" />
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/playControls"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:visibility="visible"
         app:cardBackgroundColor="@color/colorTextBackground"
         app:cardElevation="6dp"
-        >
+        app:layout_constraintBottom_toBottomOf="parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/newGameButton"
+                android:layout_width="24dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                app:srcCompat="@drawable/ic_board"
+                app:tint="@color/disable_black" />
+
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/passButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_pass"
-                app:tint="@color/disable_black"
                 android:layout_weight="1"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:foreground="?android:attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
-                />
+                android:foreground="?android:attr/selectableItemBackground"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                app:srcCompat="@drawable/ic_pass"
+                app:tint="@color/disable_black" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/previousButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_navigate_previous"
-                app:tint="@color/disable_black"
                 android:layout_weight="1"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:foreground="?android:attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
-                />
+                android:foreground="?android:attr/selectableItemBackground"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                app:srcCompat="@drawable/ic_navigate_previous"
+                app:tint="@color/disable_black" />
+
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/nextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_navigate_next"
-                app:tint="@color/disable_black"
                 android:layout_weight="1"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:foreground="?android:attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
-                />
+                android:foreground="?android:attr/selectableItemBackground"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                app:srcCompat="@drawable/ic_navigate_next"
+                app:tint="@color/disable_black" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
