--- a/app/src/main/res/layout/view_player_profile.xml
+++ b/app/src/main/res/layout/view_player_profile.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
@@ -22,7 +23,7 @@
             android:layout_marginTop="2dp"
             android:layout_marginBottom="2dp"
             app:cardBackgroundColor="#FFFFFF"
-            app:cardCornerRadius="15dp"
+            app:cardCornerRadius="50dp"
             app:cardElevation="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,35 +38,33 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginRight="10dp"
             android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/first_row"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="end"
                 android:orientation="horizontal"
-                app:layout_constrainedHeight="true"
-                app:layout_constraintStart_toEndOf="@id/iconContainer"
-                app:layout_constraintTop_toTopOf="@id/iconContainer">
+                >
 
                 <TextView
                     android:id="@+id/nameView"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:gravity="start"
                     android:textColor="@color/playerDetailsText"
                     android:textSize="30sp"
                     android:maxLines="1"
+                    tools:text="Bula"
                     app:autoSizeTextType="uniform"
                     app:autoSizeMinTextSize="12sp"
                     app:autoSizeMaxTextSize="30sp"
                     app:autoSizeStepGranularity="1sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    />
 
                 <androidx.emoji.widget.EmojiAppCompatTextView
                     android:id="@+id/flagView"
@@ -73,7 +72,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="8dp"
-                    android:textSize="18sp" />
+                    tools:text="🇷🇴"
+                    android:textSize="18sp"
+                    />
 
             </LinearLayout>
 
@@ -81,12 +82,11 @@
                 android:id="@+id/second_row"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <TextView
@@ -98,16 +98,23 @@
                         android:textSize="12sp"
                         android:textStyle="bold" />
 
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/rankView"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                        android:layout_height="wrap_content"
+                        tools:text="20k"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        />
 
-                        <TextView
-                            android:id="@+id/rankView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/glickoView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="1616 ± 64"
+                        android:textSize="12sp"
+                        android:textColor="@color/colorTextSecondary"
+                        />
                 </LinearLayout>
 
                 <LinearLayout
@@ -123,18 +130,25 @@
                         android:text="HIGHEST"
                         android:textColor="@color/colorTextSecondary"
                         android:textSize="12sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        />
 
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/highestRankView"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/highestRankView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
+                        android:layout_height="wrap_content"
+                        tools:text="8k"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        />
+                    <TextView
+                        android:id="@+id/highestRankDateView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="Jul 22, 2020"
+                        android:textSize="12sp"
+                        android:textColor="@color/colorTextSecondary"
+                        />
 
                 </LinearLayout>
 
