Facebook auth: an attempt was made :)
(cherry picked from commit 259d40d527a2b3bfa40329159a68bab946f3162e)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -141,6 +141,14 @@
             android:layout_marginTop="4dp"
             android:textColor="@color/loginText"
             />
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
+            />
         <TextView
             android:id="@+id/noAccountView"
             android:layout_width="wrap_content"
