--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,6 +65,8 @@
             android:id="@+id/passwordLayout"
             android:visibility="gone"
             tools:visibility="visible"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="#FFFFFF"
             >
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password"
