--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,22 +3,22 @@
     <item
         android:id="@+id/navigation_my_games"
         android:title="Play"
-        android:icon="@drawable/ic_board"
+        android:icon="@drawable/ic_board_filled"
         />
     <item
         android:id="@+id/navigation_learn"
         android:title="Learn"
-        android:icon="@drawable/ic_book"
+        android:icon="@drawable/ic_learn"
         />
     <item
         android:id="@+id/navigation_stats"
         android:title="Stats"
-        android:icon="@drawable/ic_stats"
+        android:icon="@drawable/ic_diagram"
         />
     <item
         android:id="@+id/navigation_settings"
         android:title="Settings"
-        android:icon="@drawable/ic_settings"
+        android:icon="@drawable/ic_settings_filled"
         />
     <!--<item-->
         <!--android:id="@+id/navigation_spectate"-->
