--- a/app/src/main/res/drawable/ic_big_clock.xml
+++ b/app/src/main/res/drawable/ic_big_clock.xml
@@ -5,27 +5,27 @@
     android:viewportHeight="45">
   <path
       android:pathData="M0,0h48v48h-48z"
-      android:fillColor="#ffffff"
+      android:fillColor="@color/panelBackground"
       android:fillAlpha="0.01"/>
   <path
       android:pathData="M24,4C12.9543,4 4,12.8648 4,23.8V44H44V23.8C44,12.8648 35.0457,4 24,4Z"
       android:strokeLineJoin="round"
       android:strokeWidth="3"
-      android:fillColor="#333"
-      android:strokeColor="#333"
+      android:fillColor="@color/buttonEnabled"
+      android:strokeColor="@color/buttonEnabled"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M24,24m-12,0a12,12 0,1 1,24 0a12,12 0,1 1,-24 0"
       android:strokeLineJoin="round"
       android:strokeWidth="3"
-      android:fillColor="#FFF"
-      android:strokeColor="#FFF"
+      android:fillColor="@color/panelBackground"
+      android:strokeColor="@color/panelBackground"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M24,18V24L28,28"
       android:strokeLineJoin="round"
       android:strokeWidth="3"
       android:fillColor="#00000000"
-      android:strokeColor="#333"
+      android:strokeColor="@color/buttonEnabled"
       android:strokeLineCap="round"/>
 </vector>
