--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -19,6 +19,7 @@
         >
 
         <include layout="@layout/view_player_profile"
+            android:id="@+id/player_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
