--- a/app/src/main/res/layout/item_finished_game_card.xml
+++ b/app/src/main/res/layout/item_finished_game_card.xml
@@ -12,7 +12,7 @@
     android:layout_marginBottom="4dp"
     app:cardElevation="1dp"
     app:cardCornerRadius="5dp"
-    app:cardBackgroundColor="@color/colorTextBackground"
+    app:cardBackgroundColor="@color/panelBackground"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -110,18 +110,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_chat_bubble"
-                android:tint="@color/colorTextSecondary"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:padding="8dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginRight="29dp"
-                />
+                app:tint="@color/colorTextSecondary" />
 
             <TextView
                 android:id="@+id/chatBadge"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
                 android:layout_gravity="right|top"
                 android:background="@drawable/oval"
                 android:elevation="2dp"
