--- a/app/src/main/res/layout/bottom_sheet_new_challenge.xml
+++ b/app/src/main/res/layout/bottom_sheet_new_challenge.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
+    android:background="@color/panelBackground"
     >
 
     <LinearLayout
