--- a/app/src/main/res/layout/item_active_game_card.xml
+++ b/app/src/main/res/layout/item_active_game_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<com.google.android.material.card.MaterialCardView
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -13,6 +13,8 @@
     app:cardElevation="1dp"
     app:cardCornerRadius="5dp"
     app:cardBackgroundColor="@color/panelBackground"
+    app:strokeColor="@color/cardBorder"
+    app:strokeWidth="1px"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -206,4 +208,4 @@
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
