--- a/app/src/main/res/layout/item_carousel.xml
+++ b/app/src/main/res/layout/item_carousel.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<com.google.android.material.card.MaterialCardView
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -10,6 +10,8 @@
     android:layout_marginBottom="4dp"
     app:cardElevation="1dp"
     app:cardBackgroundColor="@color/panelBackground"
+    app:strokeColor="@color/cardBorder"
+    app:strokeWidth="1px"
     >
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -20,4 +22,4 @@
         >
 
     </androidx.recyclerview.widget.RecyclerView>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
