--- a/app/src/main/res/layout/item_challenge.xml
+++ b/app/src/main/res/layout/item_challenge.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<com.google.android.material.card.MaterialCardView
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -13,6 +13,8 @@
     app:cardElevation="1dp"
     app:cardCornerRadius="5dp"
     app:cardBackgroundColor="@color/colorTextBackground"
+    app:strokeColor="@color/cardBorder"
+    app:strokeWidth="1px"
     >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -27,12 +29,13 @@
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:tint="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_person_filled" />
+            app:srcCompat="@drawable/ic_person_filled"
+            app:tint="@color/colorAccent"
+            />
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
@@ -107,4 +110,4 @@
             android:background="?android:selectableItemBackground"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
