--- a/app/src/main/res/layout/item_new_game.xml
+++ b/app/src/main/res/layout/item_new_game.xml
@@ -7,20 +7,20 @@
     android:orientation="vertical"
     android:background="?android:selectableItemBackground"
     >
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="56dp"
         android:layout_height="56dp"
         app:cardCornerRadius="28dp"
-        app:cardBackgroundColor="@color/white"
+        app:cardBackgroundColor="@color/roundButtonBorder"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="12dp"
         >
-        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:cardCornerRadius="26dp"
-            app:cardBackgroundColor="@color/colorAccent"
+            app:cardBackgroundColor="@color/roundButtonBackground"
             app:cardElevation="0dp"
             android:layout_margin="2dp"
             >
@@ -33,8 +33,8 @@
                 android:layout_gravity="center_vertical"
                 android:padding="12dp"
                 />
-        </androidx.cardview.widget.CardView>
-    </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
+    </com.google.android.material.card.MaterialCardView>
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
