--- a/app/src/main/res/layout/section_header.xml
+++ b/app/src/main/res/layout/section_header.xml
@@ -12,7 +12,7 @@
         android:paddingLeft="12dp"
         android:paddingTop="12dp"
         android:paddingBottom="2dp"
-        android:textColor="#9B9B9B"
+        android:textColor="@color/sectionHeader"
         android:textSize="12sp"
         android:textStyle="bold"
         />
