--- a/app/src/main/res/layout-land/fragment_game.xml
+++ b/app/src/main/res/layout-land/fragment_game.xml
@@ -3,14 +3,104 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorTextBackground">
+    <ImageView
+        android:id="@+id/backArrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_arrow_back"
+        android:padding="10dp"
+        app:tint="@color/colorText"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    <TextView
+        android:id="@+id/titleView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorText"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:maxLines="2"
+        android:ellipsize="end"
+        app:layout_constraintLeft_toRightOf="@id/backArrow"
+        app:layout_constraintTop_toTopOf="@id/backArrow"
+        app:layout_constraintBottom_toBottomOf="@id/backArrow"
+        app:layout_constraintRight_toLeftOf="@id/chatButton"
+        tools:text="Tournament Game: Fast Riesling Cup Fall 2018 (42137) R:8 (fragnix vs MrAlex)"
+        />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chipList"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/titleView"
+        app:layout_constraintLeft_toLeftOf="@id/titleView"
+        app:layout_constraintRight_toLeftOf="@id/chatButton"
+        tools:listitem="@layout/view_chip"
+        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:orientation="horizontal"
+        />
+    <ImageView
+        android:id="@+id/chatButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_chat_bubble"
+        app:layout_constraintRight_toLeftOf="@id/notificationsButton"
+        app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="fitXY"
+        android:padding="10dp"
+        android:background="?android:selectableItemBackground"
+        app:tint="@color/colorText"
+        />
+    <TextView
+        android:id="@+id/chatBadge"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_gravity="right|top"
+        android:layout_marginEnd="2dp"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/oval"
+        android:elevation="2dp"
+        android:gravity="center"
+        tools:text="10"
+        android:textColor="#FFFFFF"
+        app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintEnd_toEndOf="@id/chatButton"
+        app:layout_constraintTop_toTopOf="@id/chatButton"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:alpha="0"
+        tools:alpha="1"
+        />
+
+    <io.zenandroid.onlinego.ui.views.GameNotificationsButton
+        android:id="@+id/notificationsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toLeftOf="@id/board_container"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:indeterminate="true"
+        app:mpb_progressStyle="horizontal"
+        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
+        app:mpb_useIntrinsicPadding="false"
+        app:layout_constraintBottom_toBottomOf="@id/chipList"
+        app:mpb_indeterminateTint="@color/headerPrimaryText"
+        android:elevation="4dp"
+        android:visibility="gone"
+        />
 
     <io.zenandroid.onlinego.ui.views.PlayerDetailsView
         android:id="@+id/blackDetailsView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:elevation="2dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/chipList"
         app:layout_constraintRight_toLeftOf="@id/board_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/whiteDetailsView"
@@ -26,7 +116,7 @@
         app:cardBackgroundColor="@color/colorTextBackground"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/playControls"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:cardPreventCornerOverlap="false"
         >
@@ -34,7 +124,8 @@
         <io.zenandroid.onlinego.ui.views.BoardView
             android:id="@+id/board"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            />
     </androidx.cardview.widget.CardView>
 
     <io.zenandroid.onlinego.ui.views.PlayerDetailsView
@@ -50,10 +141,12 @@
         />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/playControls"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/board_container"
         android:visibility="visible"
         app:cardBackgroundColor="@color/dialogBackground"
         app:cardElevation="6dp"
