--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="stoneColorSeparator">#000000</color>
     <color name="sectionHeader">#9b9b9b</color>
 
-    <color name="statusBarColor">@color/colorPrimaryDark</color>
+    <color name="statusBarColor">@color/colorOffWhite</color>
     <color name="headerPrimary">@color/colorPrimary</color>
     <color name="colorNavigation">@color/colorPrimaryDark</color>
     <color name="colorNavigationUnselected">@color/colorTextSecondary</color>
